RESOLVED FIXED296495
Auto-dimming preference is not kept in sync between element fullscreen and video fullscreen
https://bugs.webkit.org/show_bug.cgi?id=296495
Summary Auto-dimming preference is not kept in sync between element fullscreen and vi...
phinehas133
Reported 2025-07-25 13:09:15 PDT
see title
Attachments
phinehas133
Comment 1 2025-07-25 13:09:16 PDT
phinehas133
Comment 2 2025-07-25 14:25:18 PDT
EWS
Comment 3 2025-08-14 17:55:34 PDT
Committed 298720@main (52379892b081): <https://commits.webkit.org/298720@main> Reviewed commits have been landed. Closing PR #48538 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.