Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm
@@ -38,6 +38,7 @@
 #import "WebPageProxy.h"
 #import "WebProcessPool.h"
 #import "WebProcessProxy.h"
+#import <Foundation/Foundation.h>
 #import <WebCore/NullPlaybackSessionInterface.h>
 #import <WebCore/PlaybackSessionInterfaceAVKit.h>
 #import <WebCore/PlaybackSessionInterfaceAVKitLegacy.h>
@@ -62,6 +63,7 @@ WTF_MAKE_TZONE_ALLOCATED_IMPL(PlaybackSessionModelContext);
 PlaybackSessionModelContext::PlaybackSessionModelContext(PlaybackSessionManagerProxy& manager, PlaybackSessionContextIdentifier contextId)
     : m_manager(manager)
     , m_contextId(contextId)
+    , m_prefersAutoDimming([[NSUserDefaults standardUserDefaults] boolForKey:@"WebKitPrefersFullScreenDimming"])
 {
 }
 
@@ -331,6 +333,14 @@ void PlaybackSessionModelContext::setPlayingOnSecondScreen(bool value)
     ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER, value);
     if (RefPtr manager = m_manager.get())
         manager->setPlayingOnSecondScreen(m_contextId, value);
+}
+
+void PlaybackSessionModelContext::setPrefersAutoDimming(bool value)
+{
+    if (m_prefersAutoDimming != value) {
+        m_prefersAutoDimming = value;
+        [[NSUserDefaults standardUserDefaults] setBool:value forKey:@"WebKitPrefersFullScreenDimming"];
+    }
 }
 
 void PlaybackSessionModelContext::playbackStartedTimeChanged(double playbackStartedTime)
@@ -1119,6 +1129,32 @@ void PlaybackSessionManagerProxy::removeNowPlayingMetadataObserver(PlaybackSessi
 void PlaybackSessionManagerProxy::setSoundStageSize(PlaybackSessionContextIdentifier contextId, WebCore::AudioSessionSoundStageSize size)
 {
     sendToWebProcess(contextId, Messages::PlaybackSessionManager::SetSoundStageSize(contextId.object(), size));
+}
+
+bool PlaybackSessionManagerProxy::prefersAutoDimming() const
+{
+    if (!m_controlsManagerContextId)
+        return false;
+
+    auto it = m_contextMap.find(*m_controlsManagerContextId);
+    if (it == m_contextMap.end())
+        return false;
+
+    Ref model = std::get<0>(it->value);
+    return model->prefersAutoDimming();
+}
+
+void PlaybackSessionManagerProxy::setPrefersAutoDimming(bool prefersAutoDimming)
+{
+    if (!m_controlsManagerContextId)
+        return;
+
+    auto it = m_contextMap.find(*m_controlsManagerContextId);
+    if (it == m_contextMap.end())
+        return;
+
+    Ref model = std::get<0>(it->value);
+    model->setPrefersAutoDimming(prefersAutoDimming);
 }
 
 bool PlaybackSessionManagerProxy::wirelessVideoPlaybackDisabled()
