Source/WebKit/UIProcess/ios/PageClientImplIOS.mm
@@ -815,7 +815,6 @@ WebFullScreenManagerProxyClient& PageClientImpl::fullScreenManagerProxyClient()
         return *m_fullscreenClientForTesting;
     return *this;
 }
-
 // WebFullScreenManagerProxyClient
 
 void PageClientImpl::closeFullScreenManager()
@@ -895,6 +894,20 @@ void PageClientImpl::beganExitFullScreen(const IntRect& initialFrame, const IntR
 }
 
 #endif // ENABLE(FULLSCREEN_API)
+
+void PageClientImpl::didEnterFullscreen()
+{
+#if ENABLE(VIDEO_PRESENTATION_MODE) && ENABLE(FULLSCREEN_API)
+    [[webView() fullScreenWindowController] didEnterVideoFullscreen];
+#endif
+}
+
+void PageClientImpl::didExitFullscreen()
+{
+#if ENABLE(VIDEO_PRESENTATION_MODE) && ENABLE(FULLSCREEN_API)
+    [[webView() fullScreenWindowController] didExitVideoFullscreen];
+#endif
+}
 
 void PageClientImpl::didFinishLoadingDataForCustomContentProvider(const String& suggestedFilename, std::span<const uint8_t> dataReference)
 {
